# global-mobility-analyzer

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/workflows/: git-push.md
docs/: PRD.md  Roadmap.md  System_Design.md
docs/adr/: ADR-001-Modular-Subgraphs.md  ADR-002-Corrective-RAG.md  ADR-003-Stealth-Verification.md
src/: __init__.py
src/agents/: __init__.py  document_clerk.py  grader.py  legal_analyst.py  report_generator.py  supervisor.py  verifier.py
src/data/: ingestion.py
src/shared/: __init__.py  observability.py  state.py
src/workflows/: __init__.py  ca_express_entry.py  de_opportunity_card.py  uk_skilled_worker.py
tests/: __init__.py
